<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/group_background"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rodzaj_przesylki"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_group"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/pocztowka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/pocztowka" />

            <RadioButton
                android:id="@+id/list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list" />

            <RadioButton
                android:id="@+id/paczka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paczka" />
        </RadioGroup>
    </LinearLayout>
    <Button
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/btn_cena"
        android:id="@+id/btn_cena"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zdjecie"
            android:background="@drawable/pocztowka"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cena_text"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="Cena"
            android:textSize="23dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/group_background"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dane_adresowe"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ulica_nr"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:layout_width="200dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:id="@+id/nr_ulicy"
            android:layout_height="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Kod_pocz"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:layout_width="100dp"
            android:layout_marginBottom="20dp"
            android:layout_height="40dp"
            android:id="@+id/kod_pocztowy"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Miasto"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/miasto"
            android:layout_width="200dp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"
            android:layout_height="40dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_zatwierdz"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/btn_zatwierdz"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"/>
</LinearLayout>